--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="/manifest.json" />
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -22,19 +22,17 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Pankaj Vaghela</title>
+
+    <script>
+      var l = window.location;
+      l.replace(
+        l.origin +
+          (l.search.length > 0 ? l.search + "&" : "?") +
+          "route=" +
+          l.pathname +
+          l.hash
+      );
+    </script>
   </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+  <body></body>
 </html>
