--- a/public/indexbkup.html
+++ b/public/indexbkup.html
@@ -5,28 +5,13 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Home to the world of Pankaj Vaghela" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <meta name="description" content="Portfolio website of Pankaj Vaghela, Full Stack Web Developer" />
-      <meta
-        name="keywords"
-        content="Pankaj Vaghela, Computer, Science, IIIT Ranchi, Full Stack, Web developer"
-      />
-
-      <link rel="canonical" href="https://pankajvaghela.live" />
-      <title>Pankaj Vaghela</title>
-
-      <meta property="og:title" content="Pankaj Vaghela"></meta>
-      <meta property="og:description" content="Portfolio website of Pankaj Vaghela, Full Stack Web Developer, B.Tech. Computer Science"></meta>
-      <meta property="og:url" content="https://pankajvaghela.live" />
-      <meta property="og:image" content="https://res.cloudinary.com/lotivo/image/upload/v1622467754/creative_lotus_site/Group_89pankaj_ao9ujc.png" />
-      <meta property="og:type" content="website" />
-      <meta property="og:site_name" content="Pankaj Vaghela" />
-
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -36,13 +21,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <title>Pankaj Vaghela</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    {% comment %} <div id="root"></div> {% endcomment %}
-    <script type="text/javascript">
-      window.location = "http://pankajvaghela.live"
-    </script>
+    <div id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
