move redirection in head of page

--- a/public/index.html
+++ b/public/index.html
@@ -6,52 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <meta name="description" content="Portfolio website of Pankaj Vaghela, Full Stack Web Developer" />
-      <meta
-        name="keywords"
-        content="Pankaj Vaghela, Computer, Science, IIIT Ranchi, Full Stack, Web developer"
-      />
-
-      <link rel="canonical" href="https://pankajvaghela.live" />
-      <title>Pankaj Vaghela</title>
-
-      <meta property="og:title" content="Pankaj Vaghela"></meta>
-      <meta property="og:description" content="Portfolio website of Pankaj Vaghela, Full Stack Web Developer, B.Tech. Computer Science"></meta>
-      <meta property="og:url" content="https://pankajvaghela.live" />
-      <meta property="og:image" content="https://res.cloudinary.com/lotivo/image/upload/v1622467754/creative_lotus_site/Group_89pankaj_ao9ujc.png" />
-      <meta property="og:type" content="website" />
-      <meta property="og:site_name" content="Pankaj Vaghela" />
-
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    {% comment %} <div id="root"></div> {% endcomment %}
     <script type="text/javascript">
       window.location = "http://pankajvaghela.live"
     </script>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta name="description" content="Portfolio website of Pankaj Vaghela, Full Stack Web Developer" />
+    <meta name="keywords" content="Pankaj Vaghela, Computer, Science, IIIT Ranchi, Full Stack, Web developer" />
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <link rel="canonical" href="https://pankajvaghela.live" />
+    <title>Pankaj Vaghela</title>
+
+    <meta property="og:title" content="Pankaj Vaghela" />
+    <meta property="og:description" content="Portfolio website of Pankaj Vaghela, Full Stack Web Developer, B.Tech. Computer Science"></meta>
+    <meta property="og:url" content="https://pankajvaghela.live" />
+    <meta property="og:image" content="https://res.cloudinary.com/lotivo/image/upload/v1622467754/creative_lotus_site/Group_89pankaj_ao9ujc.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Pankaj Vaghela" />
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+
   </body>
 </html>
