update og image url

--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <script type="text/javascript">
-      window.location = "http://pankajvaghela.live"
-    </script>
+    <script type="text/javascript">window.location="http://pankajvaghela.live"</script>
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <meta name="description" content="Portfolio website of Pankaj Vaghela, Full Stack Web Developer" />
+    <meta name="description" content="Portfolio website of Pankaj Vaghela, Full Stack Web Developer, Computer Science Graduate" />
     <meta name="keywords" content="Pankaj Vaghela, Computer, Science, IIIT Ranchi, Full Stack, Web developer" />
 
     <link rel="canonical" href="https://pankajvaghela.live" />
@@ -20,7 +18,7 @@
     <meta property="og:title" content="Pankaj Vaghela" />
     <meta property="og:description" content="Portfolio website of Pankaj Vaghela, Full Stack Web Developer, B.Tech. Computer Science"></meta>
     <meta property="og:url" content="https://pankajvaghela.live" />
-    <meta property="og:image" content="https://res.cloudinary.com/lotivo/image/upload/v1622467754/creative_lotus_site/Group_89pankaj_ao9ujc.png" />
+    <meta property="og:image" content="https://res.cloudinary.com/lotivo/image/upload/f_auto/v1622482454/creative_lotus_site/pankaj-vaghela-2.5x.png" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Pankaj Vaghela" />
   </head>
